Default to a CDN load. Fallback to GRPC.